Users can now expedite the creation of recurring tasks ahead of schedule by using the 'Create Now' button found in the 'Upcoming' tab of the 'Tasks' page.
Focus launcher automatically adjusts the focus duration, targeting 90-minute blocks.
No delay when adding a task or a project from a focus launcher.
1728054756723
An option to change the end time when finishing a focus session is helpful when the user forgets to stop the session and wants to adjust the end time.
If a session went for too long and Increaser stopped it automatically, the app will open an editor where the user can easily adjust auto-stopped session end time.
A more comfortable focus sounds navigation.
When adding a YouTube video to focus sounds, you can see a preview of the video, and the name will be filled in automatically based on the YouTube video's title.
1727537960954
Added the ability to set both start and end boundaries in the project's report interval selector.
YouTube focus music now resumes from where it left off, instead of restarting at the beginning of each session.
The project filter on the tasks page now persists across tabs and pages.
Added filtering by category to the principles page.
1726893259773
Select specific focus notifications you want to receive: session end, workday end, eye break.  
Turn on/off focus notification sound alerts from the focus page.
During a focus session, you can hover over the timer to see the log of your current focus session, where each item is either work on a project with a duration, or a break with a duration.
Tasks, projects, habits, life aspirations, goals, ideas, and principles changes are saved automatically without the need to press the "Save" button.
1726289037356
Sub-tasks section is hidden by default, appears only when you choose to add sub-tasks. Collapsible and decluttered with hover-only drag-and-drop and remove button.
Task links section is hidden by default, appears only when adding links. More compact for easier task management.