@@ -1,0 +1,7 @@
+import { ReactNode } from 'react'
+
+export type ProductToolEducation = {
+  title: string
+  subtitle: string
+  content: ReactNode
+}
