@@ -5,10 +5,30 @@ import { TaskTextContainer } from '../TaskTextContainer'
 import { TaskProject } from '../TaskProject'
 import { useCurrentForecastedTask } from './state/currentForecastedTask'
 import { ForceRecurringTaskCreation } from './ForceRecurringTaskCreation'
-import { HStack } from '@lib/ui/css/stack'
+import { hStack, HStack } from '@lib/ui/css/stack'
+import { ForecastedTaskCreationTime } from './ForecastedTaskCreationTime'
+import { toSizeUnit } from '@lib/ui/css/toSizeUnit'
+import { tightListItemConfig } from '@lib/ui/list/tightListItemConfig'
 
 const Content = styled(TaskItemFrame)`
   pointer-events: none;
+`
+
+const Actions = styled.div`
+  ${hStack({
+    gap: 4,
+    alignItems: 'center',
+  })}
+
+  height: ${toSizeUnit(
+    tightListItemConfig.lineHeight + tightListItemConfig.verticalPadding * 2,
+  )};
+
+  > * {
+    height: 32px;
+  }
+
+  flex-shrink: 0;
 `
 
 export const ForecastedRecurringTask = () => {
@@ -27,7 +47,10 @@ export const ForecastedRecurringTask = () => {
           {value.name}
         </TaskTextContainer>
       </Content>
-      <ForceRecurringTaskCreation />
+      <Actions>
+        <ForceRecurringTaskCreation />
+        <ForecastedTaskCreationTime />
+      </Actions>
     </HStack>
   )
 }
