@@ -1,4 +1,5 @@
 Users can now expedite the creation of recurring tasks ahead of schedule by using the 'Create Now' button found in the 'Upcoming' tab of the 'Tasks' page.
+Users can now see on the 'Upcoming' tab of the 'Tasks' page when their recurring task will actually be created.
 Focus launcher automatically adjusts the focus duration, targeting 90-minute blocks.
 No delay when adding a task or a project from a focus launcher.
 1728054756723
